--- a/Week4/app/src/main/AndroidManifest.xml
+++ b/Week4/app/src/main/AndroidManifest.xml
@@ -10,15 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.IntentProject">
+        android:theme="@style/Theme.ParcelableTestApp">
         <activity
-            android:name=".views.StatisticsActivity"
+            android:name=".MainActivity2"
             android:exported="false" />
         <activity
-            android:name=".views.GameActivity"
-            android:exported="false" />
-        <activity
-            android:name=".views.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
